==> woznk/cortex-ap/trunk/Firmware/Source/mmc.c <==
#include "stm32f10x.h"
#include "stm32f10x_spi.h"
#include "diskio.h"
#define CMD0    (0x40+0)    /* GO_IDLE_STATE */
#define CMD1    (0x40+1)    /* SEND_OP_COND */
#define CMD8    (0x40+8)    /* SEND_IF_COND */
#define CMD9    (0x40+9)    /* SEND_CSD */
#define CMD10   (0x40+10)   /* SEND_CID */
#define CMD12   (0x40+12)   /* STOP_TRANSMISSION */
#define CMD16   (0x40+16)   /* SET_BLOCKLEN */
#define CMD17   (0x40+17)   /* READ_SINGLE_BLOCK */
#define CMD18   (0x40+18)   /* READ_MULTIPLE_BLOCK */
#define CMD23   (0x40+23)   /* SET_BLOCK_COUNT */
#define CMD24   (0x40+24)   /* WRITE_BLOCK */
#define CMD25   (0x40+25)   /* WRITE_MULTIPLE_BLOCK */
#define CMD41   (0x40+41)   /* SEND_OP_COND (ACMD) */
#define CMD55   (0x40+55)   /* APP_CMD */
#define CMD58   (0x40+58)   /* READ_OCR */
#define GPIO_SD_PORT            GPIOB
#define RCC_APB2Periph_GPIO_CS  RCC_APB2Periph_GPIOB
#define GPIO_CS_PIN             GPIO_Pin_12
#define GPIO_CK_PIN             GPIO_Pin_13
#define GPIO_RX_PIN             GPIO_Pin_14
#define GPIO_TX_PIN             GPIO_Pin_15
#define SELECT()    GPIO_ResetBits(GPIO_SD_PORT, GPIO_CS_PIN)
#define DESELECT()  GPIO_SetBits(GPIO_SD_PORT, GPIO_CS_PIN)

static void xmit_spi(BYTE dat)
{
    BYTE rcvdat;

    while(SPI_I2S_GetFlagStatus(SPI2, SPI_I2S_FLAG_TXE) == RESET);
    SPI_I2S_SendData(SPI2, dat);        /* Write the data to the tx fifo */
    rcvdat = SPI_I2S_ReceiveData(SPI2); /* flush data read during the write */
}

static BYTE rcvr_spi (void)
{
    BYTE rcvdat;

    while(SPI_I2S_GetFlagStatus(SPI2, SPI_I2S_FLAG_TXE) == RESET);
    SPI_I2S_SendData(SPI2, 0xFF);       /* write dummy data */
    rcvdat = SPI_I2S_ReceiveData(SPI2); /* read data frm rx fifo */

    return (BYTE)rcvdat;
}

static void send_initial_clock_train(void)
{
  unsigned int i;
  GPIO_InitTypeDef GPIO_InitStructure;

  /* Configure SPI1 pins: SCK, MISO and MOSI */
  GPIO_InitStructure.GPIO_Pin = GPIO_TX_PIN;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_Init(GPIOB, &GPIO_InitStructure);

  /* Ensure CS is held high. */
  DESELECT();

  /* Switch the TX line to a GPIO and drive it high too. */
  GPIO_SetBits(GPIO_SD_PORT, GPIO_TX_PIN);

  /* Send 10 bytes over the SSI. This causes the clock to wiggle the */
  /* required number of times. */
  for (i = 0 ; i < 10 ; i++) {
      /* Write DUMMY data, wait until end of transmission */
      while(SPI_I2S_GetFlagStatus(SPI2, SPI_I2S_FLAG_TXE) == RESET);
      SPI_I2S_SendData(SPI2, 0xFF);       /* write dummy data */
  }

  /* Revert to hardware control of the TX line. */
  GPIO_InitStructure.GPIO_Pin = GPIO_TX_PIN;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_Init(GPIOB, &GPIO_InitStructure);
}

static void power_on (void)
{
  uint8_t dummyread;
  SPI_InitTypeDef  SPI_InitStructure;
  GPIO_InitTypeDef GPIO_InitStructure;

  /* Enable SPI2 clock */
  RCC_APB1PeriphClockCmd(RCC_APB1Periph_SPI2, ENABLE);

  /* Enable GPIO clock for CS */
  RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB | RCC_APB2Periph_GPIO_CS, ENABLE);

  /* Configure SPI2 pins: SCK, MISO and MOSI */
  GPIO_InitStructure.GPIO_Pin = GPIO_CK_PIN | GPIO_RX_PIN | GPIO_TX_PIN;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_Init(GPIOB, &GPIO_InitStructure);

  /* Configure I/O for Chip select */
  GPIO_InitStructure.GPIO_Pin = GPIO_CS_PIN;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_Init(GPIO_SD_PORT, &GPIO_InitStructure);

  /* Deselect the SD: Chip Select high */
  DESELECT();

  /* SPI2 configuration */
  SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
  SPI_InitStructure.SPI_Mode = SPI_Mode_Master;
  SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;
  SPI_InitStructure.SPI_CPOL = SPI_CPOL_Low;
  SPI_InitStructure.SPI_CPHA = SPI_CPHA_1Edge;
  SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;
  SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_128;
  SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
  SPI_InitStructure.SPI_CRCPolynomial = 7;
  SPI_Init(SPI2, &SPI_InitStructure);

  SPI_CalculateCRC(SPI2, DISABLE);

  /* Enable SPI2  */
  SPI_Cmd(SPI2, ENABLE);

  /* Set DI and CS high and apply more than 74 pulses to SCLK for the card */
  /* to be able to accept a native command. */
//  send_initial_clock_train();
  while (SPI_I2S_GetFlagStatus(SPI2, SPI_I2S_FLAG_TXE) == RESET) { ; }
  dummyread = SPI_I2S_ReceiveData(SPI2);

  PowerFlag = 1;
}

static void set_max_speed(void)
{
  SPI_InitTypeDef  SPI_InitStructure;

  /* Disable the SSI */
  SPI_Cmd(SPI2, DISABLE);

  /* SPI1 configuration */
  SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
  SPI_InitStructure.SPI_Mode = SPI_Mode_Master;
  SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;
  SPI_InitStructure.SPI_CPOL = SPI_CPOL_High;
  SPI_InitStructure.SPI_CPHA = SPI_CPHA_2Edge;
  SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;
  SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_2;
  SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
  SPI_InitStructure.SPI_CRCPolynomial = 7;
  SPI_Init(SPI2, &SPI_InitStructure);

  /* Enable SPI2  */
  SPI_Cmd(SPI2, ENABLE);
}
